# xenos

./: .dockerignore  .env.example  .eslintignore  .gitignore  AGENTS.md  CLAUDE.md  CLOUDBASE_DEPLOY.md  DEPLOY.md  DEPLOY_CHECKLIST.md  Dockerfile  README.md  README_EN.md  build-page.js  cloudbaserc.json  create-page.js  deploy-cloudbase.bat  edit-test.js  mcp-config.json  mcp-config.local.example.json  next.config.js  opencode.json  opencode.jsonc  package-lock.json  package.json  server_obsidian_io.py  tailwind.config.js  temp-write-page.js  test-xenos-write.js  vercel.json
.claude/: settings.local.json
.opencode/: openwork.json
docs/: api-docs.md  brand-story.md  demo-script.md  developer-article.md  integration-guide.md  key-messages.md  social-media-posts.md  towow-integration.md  xenos-network-design.md  xenos-protocol-intro.md  xenos-ux-design.md
mcp/: index.ts
prisma/: dev.db  schema.prisma
scripts/: create-test-user.js  trial-towow.sh
src/: test-src.js
tests/: api.spec.ts  e2e.spec.ts
xenos-towow-plugin/: .env.example  .gitignore  API.md  Dockerfile  README.md  start.bat  (+5 more)
xenos-towow-plugin/backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
xenos-towow-plugin/backend/app/: __init__.py  main.py
xenos-towow-plugin/backend/app/routers/: __init__.py  health.py  towwow.py  xenos.py
xenos-towow-plugin/backend/app/xenos/: __init__.py  cache.py  context.py  identity.py  reputation.py  trace.py
xenos-towow-plugin/backend/tests/: conftest.py  test_context.py  test_identity.py  test_integration.py  test_reputation.py  test_trace.py
(+122 files in other folders)
