[project]
name = "xenos-towow-plugin"
version = "0.1.0"
description = "Xenos Trust Plugin for ToWow Agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "requests>=2.32.3",
    "cryptography>=42.0.8",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
